Ecomindo-D1/yaml/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: web
  name: web
spec:
  replicas: 1
  selector:
      matchLabels:
        app: web
  strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
  template:
      metadata:
        labels:
            app: web
        name: web
      spec:
        containers:
        - image: acronboarding.azurecr.io/dotnet-raihan
          livenessProbe:
            httpGet:
                path: /
                port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 3000
              hostPort: 80
              protocol: TCP
          resources:
            requests:
                cpu: 100m
                memory: 128Mi
            limits:
                cpu: 125m
                memory: 256Mi
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
