Ecomindo-D1/yaml/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  ports:
    - name: web-traffic
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web
  sessionAffinity: None
  type: LoadBalancer
